SMR-4 support for analyzing -XX:+PrintGCDetails GC log